# ZS22_UPS_Zappe

./: .gitignore  CMakeLists.txt  README.md  gui_utils.py  main.c  main.py
bonus/chat/: client_chat.py
bonus/protokol/: protokol.txt
bonus/ruby/: client_calc.c  client_echo.c  client_reverse.c
client/: client.py  client_chat.c
client/gui/: button.py  gui_scenes.py  gui_utils.py  main.py
server/: Server.cpp  Server.h  main.cpp  server_chat.c
server/game/: Game.cpp  Game.h  GameCPP.cpp  GameCPP.h  MyRandom.cpp  MyRandom.h  Player.cpp  Player.h  PlayerCPP.cpp  PlayerCPP.h  RandomCPP.cpp  RandomCPP.h  StateMachine.cpp  StateMachine.h  game.c  game.h  main.cpp  player.c  player.h  random.c  random.h  typedefs.h
